--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
             </h1>
 
             <div class="social-handle">
-                <a href="#" class="profile-link">
+                <a href="https://instagram.com/numan0010" class="profile-link">
                     <i class="profile-link-icon fab fa-instagram"></i>
                     <span class="profile-link-text">Instagram</span>
                 </a>
-                <a href="#" class="profile-link">
+                <a href="https://t.me/Unknown_Article" class="profile-link">
                     <i class="profile-link-icon fab fa-telegram-plane"></i>
                     <span class="profile-link-text">Telegram</span>
                 </a>
-                <a href="#" class="profile-link">
+                <a href="https://www.linkedin.com/in/numan-ahmed-chowdhury-77358b230" class="profile-link">
                     <i class="profile-link-icon fab fa-linkedin"></i>
                     <span class="profile-link-text">Linkedin</span>
                 </a>
-                <a href="#" class="profile-link">
+                <a href="https://github.com/expertwebdev" class="profile-link">
                     <i class="profile-link-icon fab fa-github"></i>
                     <span class="profile-link-text">Github</span>
                 </a>
