--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
         <div class="hamburger-menu">
             <span class="hamburger"></span>
         </div>
-        <!-- <div class="logo">
-            <i class="link-icons fas fa-code"></i>
-            <label for="" class="logo-text">Coder.</label>
-        </div> -->
         <div class="navMenu">
             <ul class="nav-ul">
                 <li>
@@ -41,7 +37,7 @@
                     </a>
                     <a href="#" id="themeChange" class="nav-link nav-last">
                         <i class="link-icons fas fa-sun" id="themeIcon"></i>
-                        <span class="link-text">theme</span>
+                        <span class="link-text" id="themeText">Dark</span>
                     </a>
                 </li>
             </ul>
@@ -51,19 +47,15 @@
     <main>
 
         <section class="body-head" id="home">
-            <h1 class="body-head-tittle">Hello, my name is <br> <span class="my-name-text">Numan Ahmed</span> <br>And
-                I'm a <span class="change-text"></span></h1>
-            <button type="button" class="btn-primary">Hire me</button>
+            <h1 class="body-head-tittle">Hi, I'm <span class="change-text"></span></h1>
+            <button type="button" class="btn-primary" id="hireBtn">Hire me</button>
         </section>
 
         <section class="body-head container" id="profile">
             <img src="img/dp.png" alt="dp" class="dp">
             <h1 class="body-head-tittle container-text">Hi, i am a hard working and ambitious individual with a great
                 passion for the web developement. I have completed my BCA in the year of 2021. I have excellent coding
-                skills in JavaScript and also HTML5 & CSS.
-                <br>
-                <br>
-                I have been working as a freelancer from last 6 months. I'm a front-end web developer located in Assam.
+                skills in HTML, CSS and Javascript.
             </h1>
 
             <div class="social-handle">
